--- a/todoc/app/build.gradle
+++ b/todoc/app/build.gradle
@@ -12,7 +12,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,4 +33,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'frankiesardo:icepick:3.2.0'
+
+    //ROOM
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    //VIEW MODEL & LIVE DATA
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+
+    // TESTING
+    androidTestImplementation "android.arch.core:core-testing:1.1.0"
 }
